# parametrize

./: CMakeLists.txt
src/: CircleParametrizer.cpp  CircleParametrizer.h  Edge2.h  Mesh.cpp  Mesh.h  Parametrizer.cpp  Parametrizer.h  Parametrizer3.cpp  Parametrizer3.h  PartialPolygon.cpp  PartialPolygon.h  PlaneParametrizer.cpp  PlaneParametrizer.h  PlaneParametrizer3.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Ray.cpp  Ray.h  Ray2.cpp  Ray2.h  Ray3.cpp  Ray3.h  Raycaster.cpp  Raycaster.h  Raycaster2.cpp  Raycaster2.h  Raycaster3.cpp  Raycaster3.h  Triangle.cpp  Triangle.h  Vector.cpp  Vector.h  Window.cpp  Window.h  defaults.h  main.cpp  utils.cpp  utils.h
src/2d/: CircleParametrizer.cpp  CircleParametrizer.h  CircleParametrizer2.cpp  CircleParametrizer2.h  Edge2.cpp  ParametrizedPolygon.cpp  ParametrizedPolygon.h  Parametrizer2.cpp  Parametrizer2.h  Polygon.cpp  Polygon.h  Ray2.cpp  Ray2.h  Raycaster2.cpp  Raycaster2.h
